--- a/style.css
+++ b/style.css
@@ -24,7 +24,22 @@ body {
 
 .logo {
     margin-left: 40px;
-    color: #8f8395;
+    color: #676464;
+}
+
+.nav img {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.hello {
+    margin-left: auto;
+    margin-right: 40px;
+    color: #676464;
 }
 
 .container{
@@ -73,7 +88,7 @@ h1 {
         width: 400px;
 
         top: 40%;
-    left: 50%;
-    margin: 0 0 0 -200px;
+        left: 50%;
+        margin: 0 0 0 -200px;
     }
 }
